# rusty_polygons

./: Cargo.toml
assets/shaders/: custom_render_pipeline.wgsl  custom_vertex_attribute.wgsl
crates/custom_render_pipeline/: Cargo.toml
crates/custom_render_pipeline/src/: lib.rs  render_pipeline.rs
crates/debug_ui/: Cargo.toml
crates/debug_ui/src/: lib.rs
crates/marching_cubes/: Cargo.toml
crates/marching_cubes/src/: lib.rs  lookup_tables.rs
crates/marching_cubes/src/cpu/: mod.rs
src/: custom_material.rs  game_of_life.rs  main.rs
