[workspace]
resolver = "2"
members = [
    "crates/*",
]

[package]
name = "rusty_polygons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marching_cubes = { path = "./crates/marching_cubes" }
bevy = "0.9"
bevy-inspector-egui = "0.17.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3