[workspace]
resolver = "2"
members = [
    "crates/*",
]

[package]
name = "rusty_polygons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marching_cubes = { path = "./crates/marching_cubes" }
debug_ui = { path = "./crates/debug_ui" }
bevy = "0.9"
noise = "0.8.2"

bevy_framepace = "0.11.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3